[tool.poetry]
name = "scrape-gym"
version = "0.1.0"
description = ""
authors = ["Shawn Koh <shawn@shawnkoh.sg>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
selenium = "^4.0.0"
webdriver-manager = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
